tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier1LV-AAAAAAAAAAAAAAAAAAAAAw==__EmptyCells-AAAAAAAAAAAAAAAAAAAEiA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1160,
  "prerequisites": [
    105
  ],
  "properties": {
    "auto_claim": false,
    "desc": "With your plate bender you're able to make empty cells. The circuit needs to be configured to 12 otherwise you will make foils. Once you have an LV Extruder, you can make cells directly from ingots.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§5§lEmpty Cells",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    105
  ],
  "rewards": [],
  "tasks": []
}
