tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier1LV-AAAAAAAAAAAAAAAAAAAAAw==__EmptyCircuitBoar-AAAAAAAAAAAAAAAAAAAC7A==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 748,
  "prerequisites": [
    97,
    745
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Good circuit boards require wooden pulp and refined glue to make phenolic circuit boards. By adding gold wire you can craft a good circuit board.\n\nThere are more efficient ways to make it if you look in NEI.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§5§lEmpty Circuit Board",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    97,
    745
  ],
  "rewards": [],
  "tasks": []
}
