tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier1LV-AAAAAAAAAAAAAAAAAAAAAw==__EndermanSmelterm-AAAAAAAAAAAAAAAAAAAHSQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1865,
  "prerequisites": [
    97,
    745
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Need enderpearls? Getting them by killing endermen can be dangerous. Instead of doing that, put an enderman into a smeltery with hot fluids and use a gem cast to get guaranteed pearls.\n\nThe higher the hit points, the longer they'll last, so the more pearls you get. If you can find a regenerating enderman, or an enderman spawner, you'll have all the pearls you would ever want. Later on with EnderIO you can even create your own powered spawner to make endermen on-demand. Or just place it in the End and move the mobs inside.\n\nUse a nametag on a regenerating enderman to make sure he doesn't despawn. You'll want to keep him from seeing the sky or else he'll teleport away.\n\nIf you haven't found a regen enderman yet, you can buy enderman spawn eggs to put into your smeltery with coins. Maybe you'll get lucky and get a regenerating one.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§5§lEnderman Smelterman",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    97,
    745
  ],
  "rewards": [],
  "tasks": []
}
