tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier1LV-AAAAAAAAAAAAAAAAAAAAAw==__FasterSteamTrans-AAAAAAAAAAAAAAAAAAALIQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2849,
  "prerequisites": [
    93
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Do you think that steam fluid transport is far too slow? Your LV pumps got you down, doing only 640L/s? Then it's time to make the 32 times faster LV steam valves!\n\nThey only work with steam and are just as fast as the valve on a Railcraft tank (if you put it on the bottom side).\n\nThere are also MV, HV, EV, and IV versions.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§5§lFaster Steam Transportation",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    93
  ],
  "rewards": [],
  "tasks": []
}
