tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier1LV-AAAAAAAAAAAAAAAAAAAAAw==__FertilizedEarth-AAAAAAAAAAAAAAAAAAAJWQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2393,
  "prerequisites": [
    543
  ],
  "properties": {
    "auto_claim": false,
    "desc": "With a Chemical Reactor, you can make Fertilized Earth. It ticks faster than normal farmland, so crops will mature much faster. As a bonus, it can be tilled away from water and doesn't get damaged when you fall on it.\n\nIt does allow IC2 crops to be placed on them, but will not accelerate the crops.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§5§lFertilized Earth",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    543
  ],
  "rewards": [],
  "tasks": []
}
